# try-tauri

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tauri.conf.json
src/: main.rs
