[package]
name = "try-tauri"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = [ "api-all", "devtools"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
